[package]
name = "hex"
version = "0.1.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
human-panic = "1.0.3"
itertools = "0.10.1"
structopt = "0.3.21"
