[package]
name = "hex"
version = "0.2.0"
authors = ["Alic Szecsei <aszecsei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
human-panic = "1.0.3"
itertools = "0.11.0"
structopt = "0.3.21"
thiserror = "1.0.25"
utf8-width = "0.1.5"
mark_last = "0.9.2"

[profile.release]
opt-level = 3
lto = true
debug = false